force-app/main/default/objects/Contact/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>