force-app/main/default/objects/Contact/fields/DODID__c.field-meta.xml
<CustomField>
    <fullName>DODID__c</fullName>
    <label>DODID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>