force-app/main/default/objects/Contact/fields/Paygrade__c.field-meta.xml
<CustomField>
    <fullName>Paygrade__c</fullName>
    <label>Paygrade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>