force-app/main/default/objects/Contact/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>5</length>
    <type>Text</type>
</CustomField>