force-app/main/default/objects/Contact/fields/UIC__c.field-meta.xml
<CustomField>
    <fullName>UIC__c</fullName>
    <label>UIC</label>
    <length>5</length>
    <type>Text</type>
</CustomField>